Replace Stream.toList with Stream.collect to make it work with old java